--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "cd api && node index.js"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/node": "^3.2.25",
     "axios": "^1.7.7",
@@ -22,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "framer-motion": "^11.5.6",
+    "mixitup": "^3.3.2",
     "mongoose": "^8.8.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
